--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -3,19 +3,87 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -23,25 +91,44 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
-ol, ul {
+
+ol,
+ul {
 	list-style: none;
 }
-blockquote, q {
+
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -49,18 +136,163 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+html,
+body {
+	height: 100%;
+	font-family: 'Titillium Web', sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
+h1,
+h2,
+h3,
+h4,
+h5 {
+	font-family: 'Bangers', cursive;
+	letter-spacing: 1px;
+	margin-bottom: 15px;
 }
 
 /* Your code starts here! */
+/* Navbar*/
+body {
+	margin-top: 50px;
+}
+
+header {
+	position: relative;
+}
+
+nav {
+	display: inline-block;
+	margin-top: 10px;
+	margin-left: 190px;
+}
+
+li {
+	display: inline-block;
+	margin-right: 120px;
+}
+
+li a {
+	text-decoration: none;
+	color: #c0c0c0;
+}
+
+.logo {
+	display: inline-block;
+	position: absolute;
+	right: 100px;
+}
+
+/* Hero area */
+.hero-area {
+	width: 100%;
+	height: 600px;
+	position: relative;
+}
+
+.txtBtn {
+	display: inline-block;
+	position: absolute;
+	left: 20%;
+	top: 25%;
+}
+
+h1 {
+	font-size: 100px;
+	width: 40%;
+	text-align: center;
+}
+
+.txtBtn button {
+	display: block;
+	background: #fff;
+	padding-left: 40px;
+	padding-right: 40px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: center;
+	border: 1px solid #000;
+	margin-left: 80px;
+	margin-top: 40px;
+}
+
+section img {
+	display: inline-flex;
+	position: absolute;
+	right: 20%;
+	top: 20%;
+}
+
+/* Main-About */
+main {
+	width: 100%;
+	position: relative;
+	text-align: center;
+}
+
+.container {
+	display: inline-block;
+	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.box {
+	display: inline-block;
+	margin-right: 40px;
+	width: 35%;
+	height: 100px;
+}
+
+.box2 {
+	display: inline-block;
+	margin-right: 40px;
+	width: 22%;
+	height: 100px;
+}
+
+.box h3,
+p {
+	text-align: left;
+}
+
+.box2 h3,
+p {
+	text-align: left;
+}
+
+.middle-img {
+	width: 75%;
+	height: 220px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+hr {
+	width: 75%;
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
+
+/* Contact */
+#cuzSectionWasTaken {
+	position: relative;
+	width: 100%;
+}
+
+.contact {
+	margin-left: 190px;
+}
+
+footer {
+	margin-top: 50px;
+	margin-bottom: 25px
+}
+
+footer p {
+	text-align: center;
+}
